--- a/projects/flv.html
+++ b/projects/flv.html
@@ -36,10 +36,10 @@
             <h2>L'embarcadère</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/flv_01.jpg" class="project-image">
-            <img src="../images/flv_02.jpg" class="project-image">
-            <img src="../images/flv_03.jpg" class="project-image">
-            <img src="../images/flv_04.jpg" class="project-image">
+            <img src="../images/flv_01.jpg" class="project-image-1">
+            <img src="../images/flv_02.jpg" class="project-image-1">
+            <img src="../images/flv_03.jpg" class="project-image-1">
+            <img src="../images/flv_04.jpg" class="project-image-1">
         </aside>
     </main>
 </body>
