--- a/projects/project.html
+++ b/projects/project.html
@@ -30,15 +30,15 @@
             <h2>Placeholder</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
-            <img src="../images/placeholder.jpg" class="project-image">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
+            <img src="../images/placeholder.jpg" class="project-image-1">
         </aside>
     </main>
 </body>
