--- a/projects/touch_designer.html
+++ b/projects/touch_designer.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
-    <title>Manon Hoarau – Preneur de décisions 2000</title>
+    <title>Manon Hoarau – TouchDesigner</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
 </head>
@@ -23,15 +23,18 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Programmation et&nbsp;design d'un&nbsp;site Web en&nbsp;accord avec le&nbsp;thème de&nbsp;la&nbsp;première semaine, soit "Lourd / Léger". Preneur de&nbsp;decisions 2000 a&nbsp;été&nbsp;pensé pour enlever le&nbsp;poids des&nbsp;choix du&nbsp;quotidien en&nbsp;laissant le&nbsp;dernier mot au&nbsp;hasard. Entrer une&nbsp;question donnera une&nbsp;réponse composée d'une&nbsp;phrase et&nbsp;d'un&nbsp;signe. Inspiré du&nbsp;trigramme chinois que l'on&nbsp;retrouve dans&nbsp;la&nbsp;technique divinatoire du&nbsp;Yi King, le&nbsp;signe accompagne la&nbsp;prise de&nbsp;décision et&nbsp;peut donner lieu à&nbsp;toutes sortes d'interprétations personnelles.
-                <br class="after-space">
-                <a href="https://manon-bip.github.io/preneur-de-decisions-2000/" target="_blank" class="project-link">Tester</a>
+                Bla bla bla bla.
             </p>
-            <h2>Preneur de décisions 2000</h2>
+            <h2>TouchDesigner</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/decisions_01.jpg" class="project-image-1">
-            <img src="../images/decisions_02.jpg" class="project-image-1">
+            <video controls class="project-image-2">
+                <source src="../images/touch_designer_01.mp4" type="video/mp4">
+            </video>
+            <video autoplay loop muted class="project-image-2">
+                <source src="../images/touch_designer_02.mp4" type="video/mp4">
+            </video>
+            <img src="../images/touch_designer_03.jpg" class="project-image-2">
         </aside>
     </main>
 </body>
