--- a/projects/application.html
+++ b/projects/application.html
@@ -6,7 +6,7 @@
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
-    <title>Manon Hoarau – Le guide ultime de la photo réussie</title>
+    <title>Manon Hoarau – Application</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
 </head>
@@ -23,20 +23,20 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Engagement dans la&nbsp;démarche de&nbsp;macro-projet avec une&nbsp;production libre qui regroupe et&nbsp;met en&nbsp;avant différents intérêts personnels. Remise en&nbsp;question et&nbsp;détournement du&nbsp;concept de&nbsp;normes esthétiques dans&nbsp;une&nbsp;pratique artistique, ici, la&nbsp;photographie. Ton&nbsp;absurde et&nbsp;humoristique, photographies à&nbsp;l'aspect volontairement amateur.
+                Bla bla bla bla.
                 <br class="after-space">
-                <span class="italic-text">
-                    Album photo A6 de&nbsp;huit pages reliées à&nbsp;la main. Impression sur&nbsp;papiers marron, violet et&nbsp;calque. Découpage et&nbsp;façonnage de&nbsp;pochettes à&nbsp;la&nbsp;main. Sticker violet découpé avec&nbsp;une&nbsp;perforatrice. Vignettes autocollantes et&nbsp;trombone jaune.
-                </span>
+                <a href="" target="_blank" class="project-link">Tester</a>
             </p>
-            <h2>Le guide ultime<br>de&nbsp;la&nbsp;photo réussie</h2>
+            <h2>Application</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/totem_01.jpg" class="project-image-1">
-            <img src="../images/totem_02.jpg" class="project-image-1">
-            <img src="../images/totem_03.jpg" class="project-image-1">
-            <img src="../images/totem_04.jpg" class="project-image-1">
-            <img src="../images/totem_05.jpg" class="project-image-1">
+            <video autoplay loop class="project-image-2">
+                <source src="../images/application_01.mp4" type="video/mp4">
+            </video>
+            <img src="../images/application_02.jpg" class="project-image-2">
+            <img src="../images/application_03.jpg" class="project-image-2">
+            <img src="../images/application_04.jpg" class="project-image-2">
+            <img src="../images/application_05.jpg" class="project-image-2">
         </aside>
     </main>
 </body>
