--- a/projects/application.html
+++ b/projects/application.html
@@ -33,10 +33,9 @@
             <video autoplay loop class="project-image-2">
                 <source src="../images/application_01.mp4" type="video/mp4">
             </video>
-            <img src="../images/application_02.jpg" class="project-image-2">
-            <img src="../images/application_03.jpg" class="project-image-2">
-            <img src="../images/application_04.jpg" class="project-image-2">
-            <img src="../images/application_05.jpg" class="project-image-2">
+            <img src="../images/application_02.webp" class="project-image-2">
+            <img src="../images/application_03.webp" class="project-image-2">
+            <img src="../images/application_04.webp" class="project-image-2">
         </aside>
     </main>
 </body>
