--- a/projects/blender.html
+++ b/projects/blender.html
@@ -31,7 +31,7 @@
             <video autoplay loop class="project-image-2">
                 <source src="../images/blender_01.mp4" type="video/mp4">
             </video>
-            <img src="../images/blender_02.png" class="project-image-2">
+            <img src="../images/blender_02.webp" class="project-image-2">
         </aside>
     </main>
 </body>
