--- a/projects/nikon_film_fest.html
+++ b/projects/nikon_film_fest.html
@@ -31,12 +31,12 @@
             <video controls class="project-image-2">
                 <source src="../images/nikon_film_fest_01.mp4" type="video/mp4">
             </video>
-            <img src="../images/nikon_film_fest_02.jpg" class="project-image-1">
-            <img src="../images/nikon_film_fest_03.jpg" class="project-image-1">
-            <img src="../images/nikon_film_fest_04.jpg" class="project-image-1">
-            <img src="../images/nikon_film_fest_05.jpg" class="project-image-1">
-            <img src="../images/nikon_film_fest_06.jpg" class="project-image-1">
-            <img src="../images/nikon_film_fest_07.jpg" class="project-image-1">
+            <img src="../images/nikon_film_fest_02.webp" class="project-image-1">
+            <img src="../images/nikon_film_fest_03.webp" class="project-image-1">
+            <img src="../images/nikon_film_fest_04.webp" class="project-image-1">
+            <img src="../images/nikon_film_fest_05.webp" class="project-image-1">
+            <img src="../images/nikon_film_fest_06.webp" class="project-image-1">
+            <img src="../images/nikon_film_fest_07.webp" class="project-image-1">
         </aside>
     </main>
 </body>
