--- a/index.html
+++ b/index.html
@@ -54,35 +54,29 @@
     </header>
     <main id="gallery-and-filters-container">
         <section id="gallery">
-            <a href="projects/design_sonore.html" class="image-color-filter to-project" data-name="son">
-                <img src="images/aperçus/design_sonore.jpg" class="image-in-gallery">
-            </a>
-            <a href="projects/touch_designer.html" class="image-color-filter image-invert-filter to-project" data-name="video">
-                <img src="images/aperçus/touch_designer.jpg" class="image-in-gallery">
-            </a>
             <a href="projects/motion_super_low_pixel.html" class="image-color-filter to-project" data-name="video">
-                <img src="images/aperçus/motion_super_low_pixel.jpg" class="image-in-gallery">
+                <img src="images/aperçus/motion_super_low_pixel.webp" class="image-in-gallery">
+            </a>
+            <a href="projects/design_sonore.html" class="image-color-filter to-project" data-name="son">
+                <img src="images/aperçus/design_sonore.webp" class="image-in-gallery">
             </a>
             <a href="projects/nikon_film_fest.html" class="image-color-filter to-project" data-name="video">
-                <img src="images/aperçus/nikon_film_fest.jpg" class="image-in-gallery">
+                <img src="images/aperçus/nikon_film_fest.webp" class="image-in-gallery">
+            </a>
+            <a href="projects/touch_designer.html" class="image-color-filter image-invert-filter to-project" data-name="video">
+                <img src="images/aperçus/touch_designer.webp" class="image-in-gallery">
             </a>
             <a href="projects/application.html" class="image-color-filter to-project" data-name="webdesign">
-                <img src="images/aperçus/application.jpg" class="image-in-gallery">
+                <img src="images/aperçus/application.webp" class="image-in-gallery">
             </a>
             <a href="projects/blender.html" class="image-color-filter to-project" data-name="3d">
-                <img src="images/aperçus/blender.png" class="image-in-gallery">
-            </a>
-            <a href="projects/decisions.html" class="image-color-filter to-project" data-name="webdesign">
-                <img src="images/decisions_01.jpg" class="image-in-gallery">
+                <img src="images/aperçus/blender.webp" class="image-in-gallery">
             </a>
             <a href="projects/totem.html" class="image-color-filter to-project" data-name="edition">
                 <img src="images/totem_02.jpg" class="image-in-gallery">
             </a>
             <a href="projects/flv.html" class="image-color-filter to-project" data-name="objet">
                 <img src="images/flv_01.jpg" class="image-in-gallery">
-            </a>
-            <a href="projects/project.html" class="image-color-filter to-project">
-                <img src="images/placeholder.jpg" class="image-in-gallery">
             </a>
         </section>
         <aside>
