--- a/projects/motion_super_low_pixel.html
+++ b/projects/motion_super_low_pixel.html
@@ -28,8 +28,8 @@
             <h2>Motion Super Low Pixel</h2>
         </article>
         <aside class="project-gallery">
-            <video autoplay loop class="project-image-2">
-                <source src="../images/" type="video/mp4">
+            <video autoplay loop class="project-image-1">
+                <source src="../images/motion_super_low_pixel_01.mp4" type="video/mp4">
             </video>
         </aside>
     </main>
