--- a/projects/touch_designer.html
+++ b/projects/touch_designer.html
@@ -34,7 +34,7 @@
             <video autoplay loop muted class="project-image-2">
                 <source src="../images/touch_designer_02.mp4" type="video/mp4">
             </video>
-            <img src="../images/touch_designer_03.jpg" class="project-image-2">
+            <img src="../images/touch_designer_03.webp" class="project-image-2">
         </aside>
     </main>
 </body>
