--- a/projects/application.html
+++ b/projects/application.html
@@ -25,7 +25,7 @@
             <p>
                 Bla bla bla bla.
                 <br class="after-space">
-                <a href="" target="_blank" class="project-link">Tester</a>
+                <a href="https://www.figma.com/proto/aDdow0XX9p27uNKaX7jv0A/Application?node-id=1-189&t=XfQMIEVoJuzEfHU7-1" target="_blank" class="project-link">Tester</a>
             </p>
             <h2>Application</h2>
         </article>
@@ -40,3 +40,4 @@
     </main>
 </body>
 </html>
+
