--- a/projects/application.html
+++ b/projects/application.html
@@ -23,7 +23,8 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Bla bla bla bla.
+                Conception et&nbsp;maquettage de&nbsp;l'application mobile d'un&nbsp;réseau social fictif. «DailyPic» propose un&nbsp;thème quotidien auquel&nbsp;les&nbsp;utilisateurs peuvent répondre avec&nbsp;leur&nbsp;photographie du&nbsp;jour.
+                Ce&nbsp;concept s'insère dans&nbsp;une&nbsp;approche délibérément plus minimaliste et&nbsp;fédératrice de&nbsp;la&nbsp;publication de&nbsp;contenu. 
                 <br class="after-space">
                 <a href="https://www.figma.com/proto/aDdow0XX9p27uNKaX7jv0A/Application?node-id=1-189&t=XfQMIEVoJuzEfHU7-1" target="_blank" class="project-link">Tester</a>
             </p>
@@ -40,4 +41,3 @@
     </main>
 </body>
 </html>
-
