--- a/projects/blender.html
+++ b/projects/blender.html
@@ -23,7 +23,7 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Bla bla bla bla.
+                Expérimentation visuelle en&nbsp;3D dans&nbsp;un&nbsp;style graphique personnel. Exploration des&nbsp;possibilités de&nbsp;texturing. 
             </p>
             <h2>Blender</h2>
         </article>
