--- a/projects/design_sonore.html
+++ b/projects/design_sonore.html
@@ -23,7 +23,7 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Bla bla bla bla.
+                Création d'une&nbsp;collection d’expériences sonores inspirées de&nbsp;l'univers des&nbsp;rêves, dans la&nbsp;logique du&nbsp;principe vidéo ludique du&nbsp;"thème". Retranscription sonore des&nbsp;émotions et&nbsp;des&nbsp;concepts que&nbsp;dégagent les&nbsp;différents types de&nbsp;rêves racontés. Ces&nbsp;sons sont&nbsp;accompagnés de&nbsp;boucles de&nbsp;visuels&nbsp;2D, comme peuvent l'être certaines playlists thématiques reprenant des&nbsp;OST de&nbsp;jeux vidéos sur&nbsp;YouTube.
             </p>
             <h2>Design sonore</h2>
         </article>
