--- a/projects/motion_super_low_pixel.html
+++ b/projects/motion_super_low_pixel.html
@@ -23,12 +23,12 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Bla bla bla bla.
+                Expérimentation visuelle en&nbsp;motion design. Visualisation de&nbsp;l'idée de&nbsp;la&nbsp;volatilité des&nbsp;émotions humaines.
             </p>
             <h2>Motion Super Low Pixel</h2>
         </article>
         <aside class="project-gallery">
-            <video autoplay loop class="project-image-1">
+            <video autoplay loop class="project-image-3">
                 <source src="../images/motion_super_low_pixel_01.mp4" type="video/mp4">
             </video>
         </aside>
