--- a/projects/nikon_film_fest.html
+++ b/projects/nikon_film_fest.html
@@ -23,7 +23,9 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Bla bla bla bla.
+                Imagination, conception et&nbsp;réalisation d'un&nbsp;court-métrage à&nbsp;l'occasion du&nbsp;Nikon Film Festival. Direction artistique graphique et&nbsp;expérimentale.
+                <br class="after-space">
+                En flânant sur&nbsp;les&nbsp;bords de&nbsp;la&nbsp;Seine, l'attention du&nbsp;personnage principal est&nbsp;attirée par&nbsp;une&nbsp;source de&nbsp;lumière surgissant des&nbsp;profondeurs de&nbsp;l'eau. Ce&nbsp;halo lumineux, qu'elle&nbsp;est&nbsp;la&nbsp;seule à&nbsp;percevoir, va&nbsp;la&nbsp;faire sombrer dans&nbsp;la folie.
             </p>
             <h2>Nikon Film Festival</h2>
         </article>
