--- a/projects/touch_designer.html
+++ b/projects/touch_designer.html
@@ -23,7 +23,7 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Bla bla bla bla.
+                Création d'un&nbsp;visuel interactif se&nbsp;rapprochant d'un&nbsp;outil de&nbsp;VJing. Utilisation d'archives INA se&nbsp;rapportant au&nbsp;bug de&nbsp;l'an&nbsp;2000. Un&nbsp;lien conceptuel s'effectue entre le&nbsp;sujet des&nbsp;sources vidéos et&nbsp;l'effet de&nbsp;pixelisation qui&nbsp;leur&nbsp;est superposé. L'extrait vidéo affiché change au&nbsp;rythme de&nbsp;la&nbsp;musique.
             </p>
             <h2>TouchDesigner</h2>
         </article>
