--- a/infos.html
+++ b/infos.html
@@ -59,13 +59,13 @@
                 <br>
                 EPSAA – Ivry-sur-Seine (94)
                 <br class="after-space">
-                <span class="bold-text">2025 | DSAA Design graphique Narration multimédia</span>
+                <span class="bold-text">2025 | DSAA (Bac +5) Design graphique Narration multimédia</span>
                 <br>
-                École Jacques Prévert – Boulogne-Billancourt&nbsp;(92)
+                Lycée Jacques Prévert – Boulogne-Billancourt&nbsp;(92)
                 <br class="after-space">
-                <span class="bold-text">2023 | DNMADe Design graphique option édition</span>
+                <span class="bold-text">2023 | DNMADe (Bac +3) Design graphique option édition</span>
                 <br>
-                École Léonard-de-Vinci – Montaigu&nbsp;(85)
+                Lycée Léonard-de-Vinci – Montaigu&nbsp;(85)
             </p>
         </article>
         <article>
@@ -125,3 +125,4 @@
     </footer>
 </body>
 </html>
+
