--- a/infos.html
+++ b/infos.html
@@ -113,11 +113,18 @@
                 <br>
                 <span class="wingdings2">' </span>+33&#8201;6&#8201;45&#8201;37&#8201;01&#8201;53
             </p>
-            <p id="outside-links">
-                <span class="wingdings2">E </span><a href="https://drive.google.com/file/d/1d8Gypq_hkTmXzwjb1SgPBxqcdtC__D3T/view?usp=sharing" target="_blank" class="infos-link">Cv</a>
-                <span class="wingdings2">E </span><a href="https://www.linkedin.com/in/manon-hoarau/" target="_blank" class="infos-link">LinkedIn</a>
-                <span class="wingdings2">E </span><a href="https://www.instagram.com/inarainytown/" target="_blank" class="infos-link">Instagram (illu)</a>
-            </p>
+            <div id="infos-outside-links">
+                <p class="infos-symbol-and-link">
+                    <span class="wingdings2">E </span><a href="https://drive.google.com/file/d/1d8Gypq_hkTmXzwjb1SgPBxqcdtC__D3T/view?usp=sharing" target="_blank" class="infos-link">CV</a>
+                </p>
+                <p class="infos-symbol-and-link">
+                    <span class="wingdings2">E </span><a href="https://www.linkedin.com/in/manon-hoarau/" target="_blank" class="infos-link">LinkedIn</a>
+                </p>
+                <p class="infos-symbol-and-link">
+                    <span class="wingdings2">E </span><a href="https://www.instagram.com/inarainytown/" target="_blank" class="infos-link">Instagram (illu)</a>
+                </p>
+
+            </div>
         </article>
     </main>
     <footer id="footer" class="italic-text">
@@ -125,4 +132,3 @@
     </footer>
 </body>
 </html>
-
