--- a/projects/blender.html
+++ b/projects/blender.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
-    <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
+    <meta name="keywords" content="Design, Graphic design, Design graphique, Graphisme, Graphiste, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
     <title>Manon Hoarau – Blender</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
