--- a/projects/facade.html
+++ b/projects/facade.html
@@ -6,11 +6,11 @@
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Design, Graphic design, Design graphique, Graphisme, Graphiste, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
-    <title>Manon Hoarau – Le guide ultime de la photo réussie</title>
+    <title>Manon Hoarau – Façade</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="project-page" style="--couleur-main-bis: #50210e;">
+<body class="project-page" style="--couleur-main-bis: black;">
     <header>
         <nav class="project-menu">
             <a href="../index.html"><span class="wingdings">Ã</span></a>
@@ -23,20 +23,21 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Engagement dans la&nbsp;démarche de&nbsp;macro-projet avec une&nbsp;production libre qui regroupe et&nbsp;met en&nbsp;avant différents intérêts personnels. Remise en&nbsp;question et&nbsp;détournement du&nbsp;concept de&nbsp;normes esthétiques dans&nbsp;une&nbsp;pratique artistique, ici, la&nbsp;photographie. Ton&nbsp;absurde et&nbsp;humoristique, photographies à&nbsp;l'aspect volontairement amateur.
+                Projet inspiré de&nbsp;la&nbsp;collection <span class="italic-text">Façade</span> des&nbsp;éditions Polystyrène. Découpe d’un&nbsp;bâtiment dans&nbsp;lequel évoluent les&nbsp;personnages d’un&nbsp;conte au&nbsp;choix.
+                <br class="after-space">
+                Illustration à&nbsp;quatre mains au&nbsp;feutre noir dans&nbsp;un&nbsp;style personnel. Version revisitée du&nbsp;<span class="italic-text">Petit Poucet</span>. Travail de&nbsp;cohabitation de&nbsp;deux identités illustratives différentes. Dessin des&nbsp;enfants et&nbsp;de&nbsp;certains éléments de&nbsp;décors récurrents tels que&nbsp;la&nbsp;hache ou&nbsp;encore les&nbsp;échelles.
+                <br class="after-space">
+                Réalisation exposée à&nbsp;la&nbsp;Médiathèque Hermeland située à&nbsp;Saint-Herblain à&nbsp;l’occasion du&nbsp;Festival des&nbsp;Jeux 2023.
                 <br class="after-space">
                 <span class="italic-paragraph">
-                    Album photo A6 de&nbsp;huit pages reliées à&nbsp;la main. Impression sur&nbsp;papiers marron, violet et&nbsp;calque. Découpage et&nbsp;façonnage de&nbsp;pochettes à&nbsp;la&nbsp;main. Sticker violet découpé avec&nbsp;une&nbsp;perforatrice. Vignettes autocollantes et&nbsp;trombone jaune.
+                    Impression jet d’encre et&nbsp;assemblage d’un&nbsp;leporello.
                 </span>
             </p>
-            <h2>Le guide ultime<br>de&nbsp;la&nbsp;photo réussie</h2>
+            <h2>Façade</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/totem/totem_01.webp" class="project-image-1">
-            <img src="../images/totem/totem_02.webp" class="project-image-1">
-            <img src="../images/totem/totem_03.webp" class="project-image-1">
-            <img src="../images/totem/totem_04.webp" class="project-image-1">
-            <img src="../images/totem/totem_05.webp" class="project-image-1">
+            <img src="../images/facade/facade_01.webp" class="project-image-2">
+            <img src="../images/facade/facade_02.webp" class="project-image-2">
         </aside>
     </main>
 </body>
