--- a/projects/flv.html
+++ b/projects/flv.html
@@ -5,12 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
-    <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
+    <meta name="keywords" content="Design, Graphic design, Design graphique, Graphisme, Graphiste, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
     <title>Manon Hoarau – L'embarcadère</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="project-page">
+<body class="project-page" style="--couleur-main-bis: #293e72;">
     <header>
         <nav class="project-menu">
             <a href="../index.html"><span class="wingdings">Ã</span></a>
@@ -23,23 +23,23 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Imagination d'un&nbsp;dispositif&nbsp;de médiation culturelle pour&nbsp;la&nbsp;période inter-exposition de&nbsp;la&nbsp;Fondation Louis Vuitton. Première et&nbsp;dernière étape d'une&nbsp;balade modulaire et&nbsp;ludique au&nbsp;sein du&nbsp;bâtiment.
+                Imagination d'un&nbsp;dispositif de&nbsp;médiation culturelle pour&nbsp;la&nbsp;période inter-exposition de&nbsp;la&nbsp;Fondation Louis Vuitton. Première et&nbsp;dernière étape d'une&nbsp;balade modulaire et&nbsp;ludique au&nbsp;sein du&nbsp;bâtiment.
                 <br class="after-space">
-                À&nbsp;l'arrivée, le&nbsp;visiteur se&nbsp;voit confier&nbsp;un&nbsp;passeport qui accompagnera et&nbsp;guidera sa&nbsp;déambulation, et&nbsp;qu'il&nbsp;fera tamponner à&nbsp;chaque étape complétée. Une&nbsp;fois tous les&nbsp;tampons récoltés, la&nbsp;carte interactive permet de&nbsp;retracer le&nbsp;parcours effectué en&nbsp;touchant les&nbsp;boutons associés dans&nbsp;l'ordre. Ainsi, un&nbsp;timbre représentant un&nbsp;poisson est généré en&nbsp;temps réel en&nbsp;fonction des&nbsp;boutons pressés, à&nbsp;l'aide de&nbsp;la&nbsp;technologie Arduino, puis imprimé et&nbsp;collé au&nbsp;dos&nbsp;du passeport pour&nbsp;signifier&nbsp;la finalisation de&nbsp;l'aventure.
+                À&nbsp;l'arrivée, le&nbsp;visiteur se&nbsp;voit confier un&nbsp;passeport qui&nbsp;accompagnera et&nbsp;guidera sa&nbsp;déambulation, et&nbsp;qu'il&nbsp;fera tamponner à&nbsp;chaque étape complétée. Une&nbsp;fois tous les&nbsp;tampons récoltés, la&nbsp;carte interactive permet de&nbsp;retracer le&nbsp;parcours effectué en&nbsp;touchant les&nbsp;boutons associés dans&nbsp;l'ordre. Ainsi, un&nbsp;timbre représentant un&nbsp;poisson est généré en&nbsp;temps réel en&nbsp;fonction des&nbsp;boutons pressés, à&nbsp;l'aide de&nbsp;la&nbsp;technologie Arduino, puis imprimé et&nbsp;collé au&nbsp;dos du passeport pour&nbsp;signifier la&nbsp;finalisation de&nbsp;l'aventure.
                 <br class="after-space">
-                Exposition, médiation et&nbsp;essai du&nbsp;dispositif à&nbsp;l'occasion de&nbsp;la&nbsp;Nocture FLV Lab 2024.
+                Exposition, médiation et&nbsp;essai du&nbsp;dispositif à&nbsp;l'occasion de&nbsp;la&nbsp;Nocture FLV&nbsp;Lab&nbsp;2024.
                 <br class="after-space">
-                <span class="italic-text">
-                    Plaque de&nbsp;plexiglas transparente gravée et&nbsp;percée à&nbsp;la&nbsp;découpeuse laser, posée sur&nbsp;une&nbsp;feuille de&nbsp;papier bleu. Boutons en&nbsp;carton emballés dans&nbsp;de&nbsp;l'aluminium peint et&nbsp;soudés&nbsp;à&nbsp;des fils, liés à&nbsp;une&nbsp;carte Arduino. Structure en&nbsp;MDF séparée en&nbsp;quatre pièces emboîtables à&nbsp;la&nbsp;découpeuse laser. Passeports A6 de&nbsp;six pages agrafées. Tampons en&nbsp;MDF gravés à&nbsp;la&nbsp;découpeuse laser.
+                <span class="italic-paragraph">
+                    Plaque de&nbsp;plexiglas transparente gravée et&nbsp;percée à&nbsp;la&nbsp;découpeuse laser, posée sur&nbsp;une&nbsp;feuille de&nbsp;papier bleu. Boutons en&nbsp;carton emballés dans&nbsp;de&nbsp;l'aluminium peint et&nbsp;soudés à&nbsp;des&nbsp;fils, liés à&nbsp;une&nbsp;carte Arduino. Structure en&nbsp;MDF séparée en&nbsp;quatre pièces emboîtables à&nbsp;la&nbsp;découpeuse laser. Passeports A6 de&nbsp;six pages agrafées. Tampons en&nbsp;MDF gravés à&nbsp;la&nbsp;découpeuse laser.
                 </span>
             </p>
             <h2>L'embarcadère</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/flv_01.jpg" class="project-image-1">
-            <img src="../images/flv_02.jpg" class="project-image-1">
-            <img src="../images/flv_03.jpg" class="project-image-1">
-            <img src="../images/flv_04.jpg" class="project-image-1">
+            <img src="../images/flv/flv_01.webp" class="project-image-2"> 
+            <img src="../images/flv/flv_02.webp" class="project-image-2">
+            <img src="../images/flv/flv_03.webp" class="project-image-1">
+            <img src="../images/flv/flv_04.webp" class="project-image-1">
         </aside>
     </main>
 </body>
