--- a/projects/murs.html
+++ b/projects/murs.html
@@ -6,11 +6,11 @@
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
     <meta name="keywords" content="Design, Graphic design, Design graphique, Graphisme, Graphiste, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
-    <title>Manon Hoarau – Le guide ultime de la photo réussie</title>
+    <title>Manon Hoarau – murs</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="../styles.css">
 </head>
-<body class="project-page" style="--couleur-main-bis: #50210e;">
+<body class="project-page" style="--couleur-main-bis: #eb204c;">
     <header>
         <nav class="project-menu">
             <a href="../index.html"><span class="wingdings">Ã</span></a>
@@ -23,20 +23,20 @@
     <main class="project-container">
         <article class="project-text">
             <p>
-                Engagement dans la&nbsp;démarche de&nbsp;macro-projet avec une&nbsp;production libre qui regroupe et&nbsp;met en&nbsp;avant différents intérêts personnels. Remise en&nbsp;question et&nbsp;détournement du&nbsp;concept de&nbsp;normes esthétiques dans&nbsp;une&nbsp;pratique artistique, ici, la&nbsp;photographie. Ton&nbsp;absurde et&nbsp;humoristique, photographies à&nbsp;l'aspect volontairement amateur.
+                Conception et&nbsp;mise en&nbsp;page d’une&nbsp;édition à&nbsp;partir d’une&nbsp;rédaction personnelle libre et&nbsp;d’une&nbsp;ou&nbsp;plusieurs photographies d’anonymes.
+                <br class="after-space">
+                Travail sur&nbsp;les&nbsp;notions d’espaces claustrophobiques et&nbsp;de&nbsp;nuisances sonores&thinsp;: thèmes principaux du&nbsp;texte. Retranscription visuelle du&nbsp;flou mental qui&nbsp;caractérise le&nbsp;réveil via l’imagerie déformée et&nbsp;dépouillée de&nbsp;son&nbsp;contexte. Utilisation de&nbsp;contrastes forts et&nbsp;de&nbsp;couleurs saturées pour&nbsp;évoquer le&nbsp;bruit.
                 <br class="after-space">
                 <span class="italic-paragraph">
-                    Album photo A6 de&nbsp;huit pages reliées à&nbsp;la main. Impression sur&nbsp;papiers marron, violet et&nbsp;calque. Découpage et&nbsp;façonnage de&nbsp;pochettes à&nbsp;la&nbsp;main. Sticker violet découpé avec&nbsp;une&nbsp;perforatrice. Vignettes autocollantes et&nbsp;trombone jaune.
+                    Carnet A6 de&nbsp;vingt pages reliées à&nbsp;la&nbsp;main. Impression sur&nbsp;papier photo. Couverture cartonnée recouverte de&nbsp;papier noir imprimé. Photographie encastrée dans&nbsp;la&nbsp;couverture. Titre composé de&nbsp;vignettes miniatures de&nbsp;papier découpé.
                 </span>
             </p>
-            <h2>Le guide ultime<br>de&nbsp;la&nbsp;photo réussie</h2>
+            <h2>murs</h2>
         </article>
         <aside class="project-gallery">
-            <img src="../images/totem/totem_01.webp" class="project-image-1">
-            <img src="../images/totem/totem_02.webp" class="project-image-1">
-            <img src="../images/totem/totem_03.webp" class="project-image-1">
-            <img src="../images/totem/totem_04.webp" class="project-image-1">
-            <img src="../images/totem/totem_05.webp" class="project-image-1">
+            <img src="../images/murs/murs_01.webp" class="project-image-2">
+            <img src="../images/murs/murs_02.webp" class="project-image-1">
+            <img src="../images/murs/murs_03.webp" class="project-image-1">
         </aside>
     </main>
 </body>
