--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Manon Hoarau">
     <meta name="description" content="Personal website">
-    <meta name="keywords" content="Design, Graphic design, Design graphique, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
+    <meta name="keywords" content="Design, Graphic design, Design graphique, Graphisme, Graphiste, Communication, Communication visuelle, Webdesign, Édition, Manon Hoarau">
     <title>Manon Hoarau – Accueil</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
     <link rel="stylesheet" href="styles.css">
@@ -54,10 +54,25 @@
     </header>
     <main id="gallery-and-filters-container">
         <section id="gallery">
+            <a href="projects/vous_avez_gagne.html" class="image-color-filter to-project" data-name="webdesign">
+                <img src="images/aperçus/vous_avez_gagne.webp" class="image-in-gallery">
+            </a>
+            <a href="projects/totem.html" class="image-color-filter to-project" data-name="photographie edition">
+                <img src="images/aperçus/totem.webp" class="image-in-gallery">
+            </a>
+            <a href="projects/flv.html" class="image-color-filter to-project" data-name="objet edition">
+                <img src="images/aperçus/flv.webp" class="image-in-gallery">
+            </a>
+            <a href="projects/murs.html" class="image-color-filter to-project" data-name="edition">
+                <img src="images/aperçus/murs.webp" class="image-in-gallery">
+            </a>
+            <a href="projects/facade.html" class="image-color-filter to-project" data-name="illustration edition">
+                <img src="images/aperçus/facade.webp" class="image-in-gallery">
+            </a>
             <a href="projects/motion_super_low_pixel.html" class="image-color-filter to-project" data-name="video">
                 <img src="images/aperçus/motion_super_low_pixel.webp" class="image-in-gallery">
             </a>
-            <a href="projects/design_sonore.html" class="image-color-filter to-project" data-name="son">
+            <a href="projects/design_sonore.html" class="image-color-filter to-project" data-name="son video">
                 <img src="images/aperçus/design_sonore.webp" class="image-in-gallery">
             </a>
             <a href="projects/nikon_film_fest.html" class="image-color-filter to-project" data-name="video">
@@ -72,17 +87,13 @@
             <a href="projects/blender.html" class="image-color-filter to-project" data-name="3d">
                 <img src="images/aperçus/blender.webp" class="image-in-gallery">
             </a>
-            <a href="projects/totem.html" class="image-color-filter to-project" data-name="edition">
-                <img src="images/totem_02.jpg" class="image-in-gallery">
-            </a>
-            <a href="projects/flv.html" class="image-color-filter to-project" data-name="objet">
-                <img src="images/flv_01.jpg" class="image-in-gallery">
-            </a>
         </section>
         <aside>
             <p id="project-filters">
                 <a class="active-project-filter" data-name="all">tout</a>
                 <a data-name="edition">édition</a>
+                <a data-name="illustration">illustration</a>
+                <a data-name="photographie">photographie</a>
                 <a data-name="webdesign">webdesign</a>
                 <a data-name="3d">3D</a>
                 <a data-name="video">vidéo</a>
