--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <a href="projects/facade.html" class="image-color-filter to-project" data-name="illustration edition">
                 <img src="images/aperçus/facade.webp" class="image-in-gallery">
             </a>
-            <a href="projects/motion_super_low_pixel.html" class="image-color-filter to-project" data-name="video">
+            <!-- <a href="projects/motion_super_low_pixel.html" class="image-color-filter to-project" data-name="video">
                 <img src="images/aperçus/motion_super_low_pixel.webp" class="image-in-gallery">
             </a>
             <a href="projects/design_sonore.html" class="image-color-filter to-project" data-name="son video">
@@ -86,22 +86,23 @@
             </a>
             <a href="projects/blender.html" class="image-color-filter to-project" data-name="3d">
                 <img src="images/aperçus/blender.webp" class="image-in-gallery">
-            </a>
+            </a> -->
         </section>
         <aside>
             <p id="project-filters">
                 <a class="active-project-filter" data-name="all">tout</a>
                 <a data-name="edition">édition</a>
-                <a data-name="illustration">illustration</a>
+                <<a data-name="illustration">illustration</a>
                 <a data-name="photographie">photographie</a>
                 <a data-name="webdesign">webdesign</a>
-                <a data-name="3d">3D</a>
-                <a data-name="video">vidéo</a>
+                <!-- <a data-name="3d">3D</a>
+                <a data-name="video">vidéo</a> -->
                 <a data-name="objet">objet</a>
-                <a data-name="son">son</a>
+                <!-- <a data-name="son">son</a> -->
             </p>
         </aside>
     </main>
     <script src="script.js"></script>
 </body>
 </html>
+
