--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p id="project-filters">
                 <a class="active-project-filter" data-name="all">tout</a>
                 <a data-name="edition">édition</a>
-                <<a data-name="illustration">illustration</a>
+                <a data-name="illustration">illustration</a>
                 <a data-name="photographie">photographie</a>
                 <a data-name="webdesign">webdesign</a>
                 <!-- <a data-name="3d">3D</a>
@@ -105,4 +105,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
